Ansible/iptables/evilginx-cdn/rules.v4
# Generated by iptables-save v1.6.0 on Sun Dec 15 05:45:26 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [30031:2934400]
:RATE-LIMIT - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 0.0.0.0/0 -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -s 0.0.0.0/0 -p tcp -m tcp --dport 443 -j RATE-LIMIT
-A INPUT -s 0.0.0.0/0 -p tcp -m tcp --dport 80 -j RATE-LIMIT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate NEW -j DROP
-A RATE-LIMIT -m hashlimit --hashlimit-upto 50/sec --hashlimit-burst 20 --hashlimit-mode srcip --hashlimit-name conn_rate_limit --hashlimit-htable-expire 30000 -j ACCEPT
-A RATE-LIMIT -j DROP
COMMIT
# Completed on Sun Dec 15 05:45:26 2019
# Generated by iptables-save v1.6.0 on Sun Dec 15 05:45:26 2019
*mangle
:PREROUTING ACCEPT [73853:34367476]
:INPUT ACCEPT [73851:34366810]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30072:2939304]
:POSTROUTING ACCEPT [30072:2939304]
COMMIT
# Completed on Sun Dec 15 05:45:26 2019
# Generated by iptables-save v1.6.0 on Sun Dec 15 05:45:26 2019
*nat
:PREROUTING ACCEPT [15697:945032]
:INPUT ACCEPT [608:38912]
:OUTPUT ACCEPT [49:11438]
:POSTROUTING ACCEPT [49:11438]
COMMIT
# Completed on Sun Dec 15 05:45:26 2019
